--- a/projects/hermes/src/app/editor/components/tag-input/tag-input.component.html
+++ b/projects/hermes/src/app/editor/components/tag-input/tag-input.component.html
@@ -1,6 +1,6 @@
 <mat-form-field>
   <mat-chip-list #chipList>
-    <mat-chip *ngFor="let tag of tagList"
+    <mat-chip *ngFor="let tag of tagData"
       [selectable]="true"
       [removable]="true"
       (removed)="remove(tag)">
