--- a/projects/hermes/src/app/prices/components/car-prices-form/car-prices-form.component.scss
+++ b/projects/hermes/src/app/prices/components/car-prices-form/car-prices-form.component.scss
@@ -1,18 +1,17 @@
-form {
-  margin-top: 1rem;
+mat-dialog-content {
+  text-align: center;
 }
-
+form {
+  margin: 1rem auto;
+}
 mat-form-field {
   padding: 0 0.5rem;
   width: 100%;
   max-width: 300px;
 }
-
 button {
-  display: block;
-  margin: auto;
+  margin: 0 0.25rem;
 }
-
 .image-preview {
   max-width: 300px;
   height: 200px;
