--- a/projects/hermes/src/app/prices/components/car-prices-list/car-prices-list.component.html
+++ b/projects/hermes/src/app/prices/components/car-prices-list/car-prices-list.component.html
@@ -1,34 +1,57 @@
 <div class="table-container">
-  <table *ngIf="dataSource$ | async as dataSource"
+  <table *ngIf="dataSource; else notFoundTemplate"
     mat-table
-    multiTemplateDataRows
     [dataSource]="dataSource"
     class="mat-elevation-z1">
 
     <ng-container matColumnDef="model">
       <th mat-header-cell
-        *matHeaderCellDef> Model </th>
+        *matHeaderCellDef>Model</th>
       <td mat-cell
         *matCellDef="let element"> {{element.model}} </td>
     </ng-container>
 
     <ng-container matColumnDef="brand">
       <th mat-header-cell
-        *matHeaderCellDef> Hãng </th>
+        *matHeaderCellDef>
+        <span>Hãng</span>
+        <mat-select [(value)]="filterValue"
+          (selectionChange)="applyFilter()">
+          <mat-option [value]="">-</mat-option>
+          <mat-option *ngFor="let option of options.brand"
+            [value]="option">{{ option }}</mat-option>
+        </mat-select>
+      </th>
       <td mat-cell
         *matCellDef="let element"> {{element.brand}} </td>
     </ng-container>
 
     <ng-container matColumnDef="type">
       <th mat-header-cell
-        *matHeaderCellDef> Loại xe </th>
+        *matHeaderCellDef>
+        <span>Loại xe</span>
+        <mat-select [(value)]="filterValue"
+          (selectionChange)="applyFilter()">
+          <mat-option [value]="">-</mat-option>
+          <mat-option *ngFor="let option of options.type"
+            [value]="option">{{ option }}</mat-option>
+        </mat-select>
+      </th>
       <td mat-cell
         *matCellDef="let element"> {{element.type}} </td>
     </ng-container>
 
     <ng-container matColumnDef="origin">
       <th mat-header-cell
-        *matHeaderCellDef> Nguồn gốc </th>
+        *matHeaderCellDef>
+        <span>Nguồn gốc</span>
+        <mat-select [(value)]="filterValue"
+          (selectionChange)="applyFilter()">
+          <mat-option [value]="">-</mat-option>
+          <mat-option *ngFor="let option of options.origin"
+            [value]="option">{{ option }}</mat-option>
+        </mat-select>
+      </th>
       <td mat-cell
         *matCellDef="let element"> {{element.origin}} </td>
     </ng-container>
@@ -58,58 +81,34 @@
       <th mat-header-cell
         *matHeaderCellDef> Đăng lúc </th>
       <td mat-cell
-        *matCellDef="let element"> {{element.publishAt | date: "dd/MM/yyyy"}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="expandedDetail">
-      <td mat-cell
-        *matCellDef="let element"
-        [attr.colspan]="displayedColumns.length">
-        <div class="element-detail"
-          [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-          <div class="element-image"
-            [ngStyle]="{ 'background-image': 'url(' + element.image + ')'}"></div>
-          <div class="element-power">
-            <p>
-              <span class="element__bold">Công suất:</span>
-              {{element.power}}
-            </p>
-          </div>
-          <div class="element-torque">
-            <p>
-              <span class="element__bold">Mô men xoắn:</span>
-              {{element.torque}}
-            </p>
-          </div>
-          <div class="element-contacts">
-            <p>
-              <span class="element__bold">Liên hệ:</span>
-              <span *ngFor="let info of element.contacts | formatNewlineSplash">
-                {{ info }}
-              </span>
-            </p>
-          </div>
-          <div class="element-link">
-            <a [href]="element.link"
-              target="_blank">
-              <button mat-raised-button
-                color="primary">Xem thêm</button>
-            </a>
-          </div>
-        </div>
-      </td>
+        *matCellDef="let element"> {{element.publishAt | date: "MM/yyyy"}} </td>
     </ng-container>
 
     <tr mat-header-row
-      *matHeaderRowDef="displayedColumns"></tr>
+      *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row
       *matRowDef="let element; columns: displayedColumns"
       class="element-row"
-      [class.expanded-row]="expandedElement === element"
       (click)="selectField(element)"></tr>
-    <tr mat-row
-      *matRowDef="let row; columns: ['expandedDetail']"
-      class="detail-row"></tr>
 
   </table>
+  <button mat-fab
+    class="fab-button"
+    (click)="selectField(null)">
+    <mat-icon aria-label="icon-button with a plus icon">add</mat-icon>
+  </button>
 </div>
+
+<ng-template #notFoundTemplate>
+  <div class="center">
+    <mat-progress-spinner class="mini-spinner"
+      color="accent"
+      mode="indeterminate"
+      strokeWidth="2"
+      diameter="25">
+    </mat-progress-spinner>
+    <p>Đang tải dữ liệu...</p>
+    <button mat-raised-button
+      (click)="fetchData()">Nhấn vào đây để tải lại</button>
+  </div>
+</ng-template>
