--- a/projects/hermes/src/app/prices/components/house-prices-list/house-prices-list.component.scss
+++ b/projects/hermes/src/app/prices/components/house-prices-list/house-prices-list.component.scss
@@ -1,19 +1,3 @@
-form {
-  text-align: center;
-  p {
-    display: inline-block;
-    padding: 0 0.5rem;
-  }
-}
-mat-form-field {
-  padding: 0.5rem;
-}
-.month-field {
-  width: 3rem;
-}
-.year-field {
-  width: 5rem;
-}
 .table-container {
   width: var(--container-width);
 }
@@ -24,10 +8,22 @@ th.mat-header-cell {
   text-align: center;
 }
 th.project-header {
-  min-width: 12rem;
+  width: 9rem;
+}
+th.investor-header {
+  width: 9rem;
+}
+th.location-header {
+  width: 5.8rem;
+}
+th.progress-header {
+  width: 7.7rem;
 }
 th.price-header {
-  min-width: 4.5rem;
+  width: 3.3rem;
+}
+th.publish-at-header {
+  width: auto;
 }
 td.mat-cell {
   text-align: left;
@@ -46,57 +42,22 @@ td.publish-at-cell {
 tr.detail-row {
   height: 0;
 }
-tr.element-row:not(.expanded-row):hover {
-  background: #f5f5f5;
-}
-tr.element-row:not(.expanded-row):active {
-  background: #efefef;
-}
-.element-row td {
-  border-bottom-width: 0;
+span {
+  display: block;
 }
 p {
-  text-align: left;
-  margin: 0;
+  margin-bottom: 1rem;
   padding: 0;
 }
 span {
   display: block;
 }
-.element-detail {
-  overflow: hidden;
-  display: grid;
-  grid-template-areas:
-    "image scale facilities salePerks link"
-    "image scale facilities contacts link";
-  grid-template-columns: auto 1fr 1fr 1fr auto;
-  grid-gap: 0.5rem;
-  align-items: start;
-  padding: 0.5rem 0;
-  margin: 0.5rem 0;
+.mini-spinner {
+  margin: auto;
+  margin-bottom: 1rem;
 }
-.element-image {
-  grid-area: image;
-  width: 10rem;
-  height: 7rem;
-  background-size: cover;
-}
-.element__bold {
-  color: var(--primary-color);
-  font-weight: bold;
-}
-.element-scale {
-  grid-area: scale;
-}
-.element-facilities {
-  grid-area: facilities;
-}
-.element-sale-perks {
-  grid-area: salePerks;
-}
-.element-contacts {
-  grid-area: contacts;
-}
-.element-link {
-  grid-area: link;
+.fab-button {
+  position: fixed;
+  top: 90vh;
+  left: 80vw;
 }
