--- a/projects/hermes/src/app/prices/containers/prices/prices.component.html
+++ b/projects/hermes/src/app/prices/containers/prices/prices.component.html
@@ -9,17 +9,5 @@
       </mat-select>
     </mat-form-field>
   </form>
-  <ng-container [ngSwitch]="collectionForm.controls.name.value">
-    <ng-container *ngSwitchCase="houseCollection">
-      <hm-house-prices-list></hm-house-prices-list>
-      <hm-house-prices-form [field]="priceList.selectedField$ | async"></hm-house-prices-form>
-    </ng-container>
-    <ng-container *ngSwitchCase="carCollection">
-      <hm-car-prices-list></hm-car-prices-list>
-      <hm-car-prices-form [field]="priceList.selectedField$ | async"></hm-car-prices-form>
-    </ng-container>
-    <ng-container *ngSwitchDefault>
-      <p>Woot default? something wrong</p>
-    </ng-container>
-  </ng-container>
+  <router-outlet></router-outlet>
 </div>
