--- a/projects/hermes/src/styles.scss
+++ b/projects/hermes/src/styles.scss
@@ -10,8 +10,8 @@
   --secondary-color: #159cd8;
   --text-main-color: #000000;
   --text-secondary-color: #575757;
-  --text-faded-color : #8a8a8a;
-  --container-width: 900px;
+  --text-faded-color: #8a8a8a;
+  --container-width: 996px;
 }
 
 *,
@@ -31,29 +31,24 @@ a {
   cursor: pointer;
   user-select: none;
 }
-
 mat-spinner {
   margin: auto;
+  margin-bottom: 1rem;
 }
-
 .center {
   text-align: center;
 }
-
 .container {
   margin: auto;
   padding: 1rem 0;
   max-width: var(--container-width);
 }
-
 .error {
   color: red;
 }
-
 .active-link {
   color: red;
 }
-
 .padding-bot {
   padding-bottom: 1rem;
 }
