Major pump to version (0.8.0) Added features: banner, bang-gia.

--- a/projects/hermes/src/app/core/containers/app/app.component.scss
+++ b/projects/hermes/src/app/core/containers/app/app.component.scss
@@ -1,7 +1,7 @@
 .header {
   h1 {
     margin: 3.5rem auto 1rem;
-    font-family: Play, "Courier New", Courier, monospace;
+    font-family: var(--title-font);
     text-align: center;
   }
   @media (max-width: 825px) {
