--- a/projects/hermes/src/app/editor/components/article-form/article-form.component.scss
+++ b/projects/hermes/src/app/editor/components/article-form/article-form.component.scss
@@ -29,15 +29,15 @@ mat-form-field {
 }
 
 .image-preview {
-  height: 196px;
-  width: 350px;
+  height: 169px;
+  width: 300;
   background-size: cover;
   background-position: center;
   background-position-y: 23%;
 }
 
 .video-preview {
-  height: 196px;
+  height: 169px;
   width: 100%;
 }
 
