--- a/projects/hermes/src/app/tags/containers/tags/tags.component.html
+++ b/projects/hermes/src/app/tags/containers/tags/tags.component.html
@@ -5,6 +5,9 @@
   <button mat-button
     routerLinkActive="active-link"
     routerLink="/tags/search">Tìm theo Tag</button>
+  <button mat-button
+    routerLinkActive="active-link"
+    routerLink="/tags/id">Tìm theo ID</button>
 </div>
 
 <router-outlet></router-outlet>
