--- a/projects/hermes/src/app/editor/components/article-detail/article-detail.component.scss
+++ b/projects/hermes/src/app/editor/components/article-detail/article-detail.component.scss
@@ -14,25 +14,21 @@ mat-form-field {
   padding: 3rem 0 8rem;
   max-width: var(--container-width);
 }
-
 h1.article-title {
-  margin-top: 1rem;
+  margin: 1rem 0;
   padding: 0 1.5rem;
-  font-family: "Roboto", sans-serif;
-  font-size: 2.4rem;
-  font-weight: bold;
-  line-height: 2.8rem;
+  font: 600 2.4rem/2.8rem var(--title-font), sans-serif;
 }
-
 p.article-sapo {
   padding: 1rem 1.5rem;
-  line-height: 1.8rem;
-  font-size: 1.1rem;
-  font-family: "Merriweather", serif;
+  font: italic 1.1rem/1.8rem var(--text-font), serif;
   text-align: justify;
-  font-style: italic;
 }
-
+.article-body {
+  padding: 1rem 1.5rem;
+  font-family: var(--text-font);
+  overflow: visible;
+}
 hr {
   border: 0;
   height: 1px;
@@ -44,15 +40,6 @@ hr {
     var(--primary-color-tint)
   );
 }
-
-.article-body {
-  padding: 1rem 1.5rem;
-  line-height: 1.8rem;
-  font-size: 1.1rem;
-  overflow: visible;
-  height: auto;
-}
-
 .article-source {
   padding-right: 1.5rem;
   text-align: right;
