--- a/projects/hermes/src/app/prices/containers/prices/prices.component.scss
+++ b/projects/hermes/src/app/prices/containers/prices/prices.component.scss
@@ -1,3 +1,9 @@
 mat-form-field {
   max-width: 500px;
 }
+.error {
+  color: var(--primary-color);
+}
+.result {
+  color: var(--secondary-color);
+}
