--- a/projects/hermes/src/assets/scss/quill.scss
+++ b/projects/hermes/src/assets/scss/quill.scss
@@ -1,18 +1,21 @@
 .ql-editor {
   margin: auto;
   padding: 1rem 1.5rem;
-  line-height: 1.3rem;
-  font-size: 0.9rem;
-  font-family: "Merriweather", serif;
   text-align: justify;
-  h2 {
-    font-family: "Merriweather", serif;
-    font-weight: bold;
-    line-height: 2rem;
+  font-size: 1.1rem;
+  line-height: 1.7rem;
+  h2,
+  h3 {
+    font-weight: var(--text-font__bold);
     font-size: 1.3rem;
   }
-  p, h2 {
+  p,
+  h2,
+  h3 {
     margin-bottom: 1rem;
+  }
+  b, strong {
+    font-weight: var(--text-font__bold);
   }
   blockquote {
     font-style: italic;
@@ -47,6 +50,14 @@
     li {
       padding: 0 !important;
       margin: 0 0 12px;
+    }
+  }
+  @media (max-width: 600px) {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    h2,
+    h3 {
+      font-size: 1.1rem;
     }
   }
 }
@@ -87,4 +98,3 @@
     }
   }
 }
-
