--- a/projects/hermes/src/app/banner/components/banner-form/banner-form.component.html
+++ b/projects/hermes/src/app/banner/components/banner-form/banner-form.component.html
@@ -1,5 +1,4 @@
-<form *ngIf="form"
-  [formGroup]="form"
+<form [formGroup]="form"
   (ngSubmit)="onSubmit()">
   <mat-dialog-content>
     <section class="display">
