--- a/projects/hermes/src/app/prices/containers/prices/prices.component.scss
+++ b/projects/hermes/src/app/prices/containers/prices/prices.component.scss
@@ -1,6 +1,11 @@
 mat-form-field {
   max-width: 500px;
 }
+h3 > a {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
 .error {
   color: var(--primary-color);
 }
