--- a/projects/hermes/src/app/tags/components/tag-results/tag-results.component.html
+++ b/projects/hermes/src/app/tags/components/tag-results/tag-results.component.html
@@ -1,6 +1,6 @@
 <mat-list>
   <ng-container *ngFor="let item of list">
-    <mat-list-item [routerLink]="'/article/edit/' + item.article.id">
+    <mat-list-item>
       <div matListAvatar
         [ngStyle]="{ 'background-image': 'url(' + item.article.coverImg + ')'}"></div>
       <h3 matLine> {{ item.article.title }} </h3>
@@ -8,6 +8,14 @@
         <span>{{ item.article.publishAt | date: 'dd/MM HH:mm'}} </span>
         <span>{{ item.article.sapo }}</span>
       </p>
+      <button mat-icon-button
+        [routerLink]="'/article/edit/' + item.article.id">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <a [href]="'https://nhavaxe.vn/article/' + item.article.id"
+        target="_blank">
+        <mat-icon>open_in_new</mat-icon>
+      </a>
     </mat-list-item>
     <mat-divider></mat-divider>
   </ng-container>
