minor fix videos openDialog function

--- a/projects/hermes/src/app/videos/components/vidoes-list/vidoes-list.component.html
+++ b/projects/hermes/src/app/videos/components/vidoes-list/vidoes-list.component.html
@@ -47,5 +47,5 @@
 
 <button mat-fab
   class="fab-button"
-  (click)="openDialog(-1)">
+  (click)="openDialog(-1, null)">
   <mat-icon aria-label="icon-button with a plus icon">add</mat-icon>
