--- a/projects/hermes/src/app/videos/components/vidoes-form/vidoes-form.component.html
+++ b/projects/hermes/src/app/videos/components/vidoes-form/vidoes-form.component.html
@@ -38,5 +38,11 @@
       type="submit">
       Cập nhật
     </button>
+    <button mat-raised-button
+      color="warn"
+      type="button"
+      (click)="remove()">
+      Xóa
+    </button>
   </mat-dialog-actions>
 </form>
