--- a/projects/hermes/src/app/editor/components/article-detail/article-detail.component.html
+++ b/projects/hermes/src/app/editor/components/article-detail/article-detail.component.html
@@ -30,8 +30,8 @@
     </div>
     <p class="article-source">
       Dẫn nguồn từ
-      <span>{{ meta.reference | titlecase }}</span> &copy;
-      <span>{{ meta.publisher | titlecase }}</span>
+      <span>{{ meta.reference }}</span> &copy;
+      <span>{{ meta.publisher }}</span>
     </p>
   </div>
 </div>
