--- a/projects/hermes/src/app/tags/containers/tags-list/tags-list.component.html
+++ b/projects/hermes/src/app/tags/containers/tags-list/tags-list.component.html
@@ -1,25 +1,25 @@
-<form (ngSubmit)="add()"
-  class="center">
+<form (ngSubmit)="add()" class="center">
   <mat-form-field>
-    <input [formControl]="tagInputControl"
+    <input
+      [formControl]="tagInputControl"
       matInput
       type="text"
-      placeholder="Tag" />
-    <mat-error *ngIf="tagInputControl.hasError('overLimit')">
-      Không xóa quá 3 tags cùng một lúc
+      placeholder="Tag"
+    />
+    <mat-error
+      *ngIf="tagInputControl.errors && tagInputControl.errors.minlength"
+    >
+      Tags phải có hơn 3 ký tự
     </mat-error>
   </mat-form-field>
-  <button mat-raised-button
-    color="primary"
-    type="submit">
+  <button mat-raised-button color="primary" type="submit">
     Thêm
   </button>
 </form>
 
 <mat-chip-list>
-  <mat-chip *ngFor="let tag of filteredTags$ | async">
+  <mat-chip *ngFor="let tag of (filteredTags$ | async)">
     {{ tag }}
-    <mat-icon matChipRemove
-      (click)="remove(tag)">cancel</mat-icon>
+    <mat-icon matChipRemove (click)="remove(tag)">cancel</mat-icon>
   </mat-chip>
 </mat-chip-list>
