--- a/projects/hermes/src/assets/scss/quill.scss
+++ b/projects/hermes/src/assets/scss/quill.scss
@@ -14,7 +14,8 @@
   h3 {
     margin-bottom: 1rem;
   }
-  b, strong {
+  b,
+  strong {
     font-weight: var(--text-font__bold);
   }
   blockquote {
@@ -60,6 +61,13 @@
       font-size: 1.1rem;
     }
   }
+}
+
+.ql-toolbar {
+  position: sticky;
+  top: 0;
+  background: white;
+  z-index: 1;
 }
 
 .picture-style {
