--- a/projects/hermes/src/app/editor/containers/articles-list/articles-list.component.html
+++ b/projects/hermes/src/app/editor/containers/articles-list/articles-list.component.html
@@ -1,55 +1,63 @@
 <div class="list-container">
   <form [formGroup]="form">
-    <date-time-picker [dateNumber]="queryDate"
-      (onChange)="setFromDate($event)"></date-time-picker>
+    <date-time-picker
+      [dateNumber]="queryDate"
+      (onChange)="setFromDate($event)"
+    ></date-time-picker>
     <mat-form-field *ngIf="user.isManager">
-      <mat-select placeholder="Người soạn"
-        formControlName="creatorId">
+      <mat-select placeholder="Người soạn" formControlName="creatorId">
         <mat-option value="ALLEDITOR">-- Tất cả --</mat-option>
-        <mat-option *ngFor="let editor of articles.editorList$ | async"
-          [value]="editor.id">{{ editor.fullname }}</mat-option>
+        <mat-option
+          *ngFor="let editor of (articles.editorList$ | async)"
+          [value]="editor.id"
+          >{{ editor.fullname }}</mat-option
+        >
       </mat-select>
     </mat-form-field>
     <mat-form-field>
-      <mat-select placeholder="Trạng thái"
-        formControlName="status">
+      <mat-select placeholder="Trạng thái" formControlName="status">
         <mat-option [value]="null">-- Bỏ chọn --</mat-option>
-        <mat-option *ngFor="let status of statusMap"
-          [value]="status.value">{{ status.text }}</mat-option>
+        <mat-option *ngFor="let status of statusMap" [value]="status.value">{{
+          status.text
+        }}</mat-option>
       </mat-select>
     </mat-form-field>
     <mat-form-field>
-      <mat-select placeholder="Phạm vi tìm"
-        formControlName="range">
+      <mat-select placeholder="Phạm vi tìm" formControlName="range">
         <mat-option value="day">1 ngày</mat-option>
         <mat-option value="month">30 ngày</mat-option>
       </mat-select>
     </mat-form-field>
   </form>
 
-  <ng-container *ngIf="articles.list$ | async as list; else emptyBlock">
+  <ng-container *ngIf="(articles.list$ | async) as list; else: emptyBlock">
+    <p>Tổng cộng: {{ list.length }}</p>
     <mat-list>
-      <mat-list-item *ngFor="let article of list"
-        class="list-item">
-        <article-list-item [article]="article"
-          (click)="preview(article)"></article-list-item>
-        <button mat-icon-button
-          (click)="edit(article)">
+      <mat-list-item *ngFor="let article of list" class="list-item">
+        <article-list-item
+          [article]="article"
+          (click)="preview(article)"
+        ></article-list-item>
+        <button mat-icon-button (click)="edit(article)">
           <mat-icon>edit</mat-icon>
         </button>
       </mat-list-item>
-      <!-- <mat-paginator [length]="articlesList.length"
+      <!--
+        <mat-paginator [length]="articlesList.length"
         [pageSize]="pageSize"
         (page)="handlePageChange($event)"
-        hidePageSize></mat-paginator> -->
+        hidePageSize></mat-paginator>
+      -->
     </mat-list>
   </ng-container>
 
-  <button mat-fab
+  <button
+    mat-fab
     class="fab-button"
     matTooltip="Tạo bài mới"
     color="primary"
-    (click)="handleFabClick()">
+    (click)="handleFabClick()"
+  >
     <mat-icon aria-label="icon-button with a pencil icon">edit</mat-icon>
   </button>
 </div>
