:rotating_light:Deploy version. Under battle test.

--- a/projects/hermes/src/app/tags/containers/tags/tags.component.html
+++ b/projects/hermes/src/app/tags/containers/tags/tags.component.html
@@ -1,13 +1,16 @@
 <div class="center padding-bot">
-  <button mat-button
-    routerLinkActive="active-link"
-    routerLink="/tags/list">Danh sách tags</button>
-  <button mat-button
-    routerLinkActive="active-link"
-    routerLink="/tags/search">Tìm theo Tag</button>
-  <button mat-button
-    routerLinkActive="active-link"
-    routerLink="/tags/id">Tìm theo ID</button>
+  <button mat-button routerLinkActive="active-link" routerLink="/tags/list">
+    Danh sách tags
+  </button>
+  <button mat-button routerLinkActive="active-link" routerLink="/tags/search">
+    Tìm theo Tag
+  </button>
+  <button mat-button routerLinkActive="active-link" routerLink="/tags/id">
+    Tìm theo ID
+  </button>
+  <button mat-button routerLinkActive="active-link" routerLink="/tags/cloud">
+    Tags cloud
+  </button>
 </div>
 
 <router-outlet></router-outlet>
