--- a/projects/hermes/src/app/shared/components/article-list/article-list.component.scss
+++ b/projects/hermes/src/app/shared/components/article-list/article-list.component.scss
@@ -1,26 +1,30 @@
-:host {
+.list-container {
+  max-width: 760px;
+  list-style: none;
+}
+.list-item {
   display: grid;
-  grid-template-columns: auto 1fr;
-  grid-template-rows: auto auto;
+  padding: 0.5rem;
   width: 100%;
   justify-content: left;
   align-items: flex-start;
   grid-template:
-    "thumbnail title"
-    "thumbnail info"
-    "thumbnail note";
+    "thumbnail title buttons"
+    "thumbnail info buttons"
+    "thumbnail note buttons" / auto 1fr auto;
   @media (max-width: 600px) {
     grid-template:
-      "thumbnail title"
-      "info info"
-      "note note";
+      "thumbnail title buttons"
+      "info info buttons"
+      "note note buttons" / auto 1fr auto;
   }
 }
-
+.list-item:hover {
+  background-color: var(--hover-color);
+}
 p {
   margin: 0;
 }
-
 .thumbnail {
   grid-area: thumbnail;
   div {
@@ -31,49 +35,39 @@ p {
     background-repeat: no-repeat;
   }
 }
-
 .title {
   grid-area: title;
   padding: 0 0.5rem;
 }
-
 .info {
   grid-area: info;
   padding: 0.5rem;
 }
-
 .note {
   grid-area: note;
   color: #ff4081;
   margin-top: 0.5rem;
 }
-
-.button {
-  justify-self: end;
+.buttons {
+  grid-area: buttons;
 }
-
 .author {
   color: rgba(0, 0, 0, 0.49);
 }
-
 .published {
   color: green;
   font-weight: bold;
 }
-
 .unpublished {
   color: red;
   font-weight: bold;
 }
-
 .pending {
   color: white;
   background: black;
   padding: 0 0.5rem;
 }
-
 .draft {
   border: solid 1px;
   padding: 0 0.5rem;
 }
-
