--- a/projects/hermes/src/app/tags/containers/tags-id/tags-id.component.html
+++ b/projects/hermes/src/app/tags/containers/tags-id/tags-id.component.html
@@ -9,5 +9,5 @@
 </form>
 
 <ng-container *ngIf="result$ | async as result">
-  <hm-tag-results [list]="result"></hm-tag-results>
+  <article-list [list]="result"></article-list>
 </ng-container>
