--- a/projects/hermes/src/styles.scss
+++ b/projects/hermes/src/styles.scss
@@ -6,7 +6,6 @@
 
 :root {
   --hover-color: #f8f8f8;
-
   --primary-color: #ed1d24;
   --primary-color-tint: #ffdfe0;
   --primary-background-tint: #f3fafd;
@@ -63,6 +62,16 @@ mat-spinner {
 }
 .fab-button {
   position: fixed !important;
-  bottom: 10vh;;
+  bottom: 10vh;
   left: 84vw;
+}
+.ql-toolbar {
+  position: sticky;
+  top: 0;
+  background: white;
+  z-index: 1;
+}
+
+.ql-editor > * {
+  border: 1px dotted grey;
 }
